# Solarium

./: AGENT.md  CLAUDE.md  README.md  update_baseproject.sh
.claude/: settings.json
docs/: freelance-proposal-template.md  portfolio-page-draft.md  (+1 more)
tools/gw/: HELP_IMPROVEMENTS.md  README.md  pyproject.toml
tools/gw/src/gw/: __init__.py  cli.py  config.py  gh_wrapper.py  git_wrapper.py  help_formatter.py  mcp_server.py  packages.py  secrets_vault.py  tracking.py  ui.py  wrangler.py
tools/gw/src/gw/commands/: __init__.py  auth.py  backup.py  bindings.py  cache.py  completion.py  config_validate.py  context.py  db.py  deploy.py  do.py  doctor.py  email.py  env_audit.py  export.py  flag.py  health.py  history.py  kv.py  logs.py  mcp.py  metrics.py  monorepo_size.py  packages.py  publish.py  r2.py  secret.py  social.py  status.py  tenant.py  whoami.py
tools/gw/src/gw/commands/dev/: __init__.py  build.py  check.py  ci.py  format.py  lint.py  reinstall.py  server.py  test.py
tools/gw/src/gw/commands/gh/: __init__.py  api.py  issue.py  pr.py  project.py  run.py
tools/gw/src/gw/commands/git/: __init__.py  config_cmd.py  danger.py  read.py  remote.py  shortcuts.py  tag.py  workflows.py  worktree.py  write.py
tools/gw/src/gw/commands/queen/: __init__.py  ci.py  swarm.py
tools/gw/src/gw/completions/: __init__.py  bash.py  fish.py  zsh.py
tools/gw/src/gw/safety/: __init__.py  database.py  git.py  github.py
tools/gw/tests/: __init__.py  test_dev_commands.py  test_gh.py  test_git.py  test_mcp.py  test_packages.py  test_safety.py  test_ui.py  test_worktree.py
(+26 files in other folders)
