[project]
name = "grove-wrap"
version = "0.1.0"
description = "A friendly fence around Wrangler's garden"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "cryptography>=42.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
gw = "gw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
